@@ -50,6 +50,7 @@ import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.security.AuthorizationPlugin;
+import org.apache.solr.security.PKIAuthenticationPlugin;
 import org.apache.solr.security.RuleBasedAuthorizationPluginBase;
 import org.apache.solr.util.RTimer;
 import org.apache.solr.util.RedactionUtils;
@@ -328,11 +329,10 @@ public class SystemInfoHandler extends RequestHandlerBase {
       }
     }
 
-    // User principal
-    String username = null;
-    if (req.getUserPrincipal() != null) {
-      username = req.getUserPrincipal().getName();
-      info.add("username", username);
+    if (req.getUserPrincipal() != null
+        && req.getUserPrincipal() != PKIAuthenticationPlugin.CLUSTER_MEMBER_NODE) {
+      // User principal
+      info.add("username", req.getUserPrincipal().getName());
 
       // Mapped roles for this principal
       @SuppressWarnings("resource")
@@ -341,10 +341,14 @@ public class SystemInfoHandler extends RequestHandlerBase {
         RuleBasedAuthorizationPluginBase rbap = (RuleBasedAuthorizationPluginBase) auth;
         Set<String> roles = rbap.getUserRoles(req.getUserPrincipal());
         info.add("roles", roles);
-        info.add(
-            "permissions",
-            rbap.getPermissionNamesForRoles(
-                Stream.concat(roles.stream(), Stream.of("*", null)).collect(Collectors.toSet())));
+        if (roles == null) {
+          info.add("permissions", Set.of());
+        } else {
+          info.add(
+              "permissions",
+              rbap.getPermissionNamesForRoles(
+                  Stream.concat(roles.stream(), Stream.of("*", null)).collect(Collectors.toSet())));
+        }
       }
     }
 
