@@ -9,6 +9,9 @@ Bug Fixes
 ---------------------
 * SOLR-16731: Use the right cluster property for displaying if TLS is enabled (Tomás Fernández Löbbe)
 
+* SOLR-16730: Fix NPE in SystemInfoHandler for inter-node requests that would cause the Nodes page not to load.
+  SystemInfoHandler no longer populates the username, roles and permissions in inter-node requests. (Tomás Fernández Löbbe)
+
 Dependency Upgrades
 ---------------------
 (No changes)
